--- a/src/layouts/Game/gameLayout.scss
+++ b/src/layouts/Game/gameLayout.scss
@@ -21,6 +21,12 @@
 }
 
 .footer {
+  &__flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
   &__appName {
     color: #ff0000;
     font-size: 1.4em;
@@ -36,6 +42,13 @@
   &__logo {
     &--logo {
       width: 80px;
+    }
+  }
+
+  &__socialMedia {
+    list-style-type: none;
+    &__item {
+      margin: 4px;
     }
   }
 }
