--- a/src/routes/Game/Settings/settings.scss
+++ b/src/routes/Game/Settings/settings.scss
@@ -1,7 +1,5 @@
 .settings {
-  height: 100vh;
-  padding: 10px;
-
+  padding: 30px 10px;
   &__playerForm,
   &__mobForm {
     padding: 5px;
@@ -12,6 +10,7 @@
   &__cards {
     height: 100%;
     border: 1px solid #dfdfdf;
+    margin: 10px;
   }
 }
 .ant-input:hover,
@@ -20,6 +19,6 @@
 .ant-input:visited {
   border-color: #e40611;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 2px rgba(87, 168, 233, 0.2);
-  box-shadow: 0 0 0 2px rgba(87, 168, 233, 0.2);
+  // -webkit-box-shadow: 0 0 0 2px rgba(87, 168, 233, 0.2);
+  // box-shadow: 0 0 0 2px rgba(87, 168, 233, 0.2);
 }
